Update advertisers table with new dimensions and views

--- a/advertisers.html
+++ b/advertisers.html
@@ -90,36 +90,36 @@
                 <table class="min-w-full bg-white border border-gray-200 rounded-lg">
                     <thead>
                         <tr>
-                            <th class="py-3 px-4 bg-gray-100 text-left">Ad Position</th>
-                            <th class="py-3 px-4 bg-gray-100 text-left">Size</th>
+                            <th class="py-3 px-4 bg-gray-100 text-left">Position</th>
+                            <th class="py-3 px-4 bg-gray-100 text-left">Width&nbsp;(cm)</th>
+                            <th class="py-3 px-4 bg-gray-100 text-left">Height&nbsp;(cm)</th>
                             <th class="py-3 px-4 bg-gray-100 text-left">Estimated Views</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr class="border-t border-gray-200">
-                            <td class="py-3 px-4">Front Panel</td>
-                            <td class="py-3 px-4">60cm × 40cm</td>
-                            <td class="py-3 px-4">50,000+</td>
+                            <td class="py-3 px-4">Exterior - Right Side</td>
+                            <td class="py-3 px-4">60</td>
+                            <td class="py-3 px-4">70</td>
+                            <td class="py-3 px-4">157500+</td>
                         </tr>
                         <tr class="border-t border-gray-200 bg-gray-50">
-                            <td class="py-3 px-4">Side Panels (2)</td>
-                            <td class="py-3 px-4">80cm × 50cm</td>
-                            <td class="py-3 px-4">45,000+</td>
+                            <td class="py-3 px-4">Exterior - Left Side</td>
+                            <td class="py-3 px-4">60</td>
+                            <td class="py-3 px-4">70</td>
+                            <td class="py-3 px-4">157500+</td>
                         </tr>
                         <tr class="border-t border-gray-200">
-                            <td class="py-3 px-4">Rear Panel</td>
-                            <td class="py-3 px-4">60cm × 40cm</td>
-                            <td class="py-3 px-4">40,000+</td>
+                            <td class="py-3 px-4">Exterior - Back Side</td>
+                            <td class="py-3 px-4">65</td>
+                            <td class="py-3 px-4">95</td>
+                            <td class="py-3 px-4">252000+</td>
                         </tr>
                         <tr class="border-t border-gray-200 bg-gray-50">
-                            <td class="py-3 px-4">Interior Panels (4)</td>
-                            <td class="py-3 px-4">30cm × 20cm</td>
-                            <td class="py-3 px-4">15,000+</td>
-                        </tr>
-                        <tr class="border-t border-gray-200">
-                            <td class="py-3 px-4">Digital Display</td>
-                            <td class="py-3 px-4">10" screen</td>
-                            <td class="py-3 px-4">15,000+</td>
+                            <td class="py-3 px-4">Behind Driver Seat (Digital)</td>
+                            <td class="py-3 px-4">60</td>
+                            <td class="py-3 px-4">35</td>
+                            <td class="py-3 px-4">60000+</td>
                         </tr>
                     </tbody>
                 </table>
