Add AdBack image to advertisers page

--- a/advertisers.html
+++ b/advertisers.html
@@ -123,6 +123,9 @@
                         </tr>
                     </tbody>
                 </table>
+                <div class="mt-8 flex justify-center">
+                    <img src="assets/AdBack.webp" alt="Advertisement on NovaRyd back panel" class="rounded-lg shadow-lg max-w-full h-auto" width="600" height="400">
+                </div>
             </div>
             
             <div class="bg-neutral-100 p-6 rounded-lg mb-8">
