Add contact callout with ads@novaryd.com to advertisers page

--- a/advertisers.html
+++ b/advertisers.html
@@ -145,6 +145,10 @@
                 </a>
             </div>
         </div>
+                <div class="text-center mt-8">
+                <p class="text-lg">Interested in advertising with NovaRyd? <a href="mailto:ads@novaryd.com" class="text-novaryd-green font-semibold hover:underline">ads@novaryd.com</a></p>
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
