--- a/careers.html
+++ b/careers.html
@@ -146,6 +146,7 @@
                         <a href="about.html" class="hover:text-white transition duration-300">About Us</a>
                         <a href="privacy-policy.html" class="hover:text-white transition duration-300">Privacy Policy</a>
                         <a href="terms.html" class="hover:text-white transition duration-300">Terms &amp; Conditions</a>
+                        <a href="delete-account.html" class="hover:text-white transition duration-300">Delete Account</a>
                         <a href="mailto:pavan@novaryd.com" class="hover:text-white transition duration-300">Contact</a>
                     </div>
                 </div>
