Add Pricing & Refunds pages, update Terms with fare policy, add inline fare breakdown, update footers and sitemap for Cashfree compliance

--- a/about.html
+++ b/about.html
@@ -277,7 +277,9 @@
                         <a href="about.html" class="hover:text-white transition duration-300">About Us</a>
                         <a href="privacy-policy.html" class="hover:text-white transition duration-300">Privacy Policy</a>
                         <a href="terms.html" class="hover:text-white transition duration-300">Terms & Conditions</a>
-                        <a href="delete-account.html" class="hover:text-white transition duration-300">delete account</a>
+                        <a href="/pricing/" class="hover:text-white transition duration-300">Pricing</a>
+                        <a href="/refunds/" class="hover:text-white transition duration-300">Refund/Cancellation</a>
+                        <a href="delete-account.html" class="hover:text-white transition duration-300">Delete Account</a>
                         <a href="mailto:pavan@novaryd.com" class="hover:text-white transition duration-300">Contact</a>
                     </div>
                 </div>
