--- a/delete-account.html
+++ b/delete-account.html
@@ -111,6 +111,8 @@
                 <div class="flex flex-col items-center md:items-end">
                     <div class="flex space-x-4 text-sm text-gray-400">
                         <a href="about.html" class="hover:text-white transition duration-300">About Us</a>
+                        <a href="/pricing/" class="hover:text-white transition duration-300">Pricing</a>
+                        <a href="/refunds/" class="hover:text-white transition duration-300">Refund/Cancellation</a>
                         <a href="privacy-policy.html" class="hover:text-white transition duration-300">Privacy Policy</a>
                         <a href="terms.html" class="hover:text-white transition duration-300">Terms &amp; Conditions</a>
                         <a href="delete-account.html" class="hover:text-white transition duration-300">Delete Account</a>
